# ChangeLog for app-office/kchart
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.83 2007/11/11 20:40:18 philantrop Exp $

  11 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org> kchart-1.6.3.ebuild:
  Added a minor fix for the desktop file as per bug 190006. Thanks to
  gentoofan23 for providing the patch!

  26 Jul 2007; Markus Rothe <corsair@gentoo.org> kchart-1.6.3.ebuild:
  Stable on ppc64; bug #178697

  23 Jul 2007; nixnut <nixnut@gentoo.org> kchart-1.6.3.ebuild:
  Stable on ppc wrt bug 178697

  23 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> kchart-1.6.3.ebuild:
  Stable on sparc wrt #178697

  22 Jul 2007; Jeroen Roovers <jer@gentoo.org> kchart-1.6.3.ebuild:
  Stable for HPPA (bug #178697).

  19 Jul 2007; Raúl Porcel <armin76@gentoo.org> kchart-1.6.3.ebuild:
  alpha/ia64/x86 stable wrt #178697

  18 Jul 2007; Jeroen Roovers <jer@gentoo.org> kchart-1.6.3.ebuild:
  Restoring ~hppa.

  18 Jul 2007; Marcus D. Hanwell <cryos@gentoo.org> -kchart-1.5.2.ebuild,
  -kchart-1.6.2.ebuild:
  Cleaned out old versions.

  18 Jul 2007; Marcus D. Hanwell <cryos@gentoo.org> kchart-1.6.3.ebuild:
  Marked stable on amd64, bug 178697.

*kchart-1.6.3 (08 Jun 2007)

  08 Jun 2007; Carsten Lohrke <carlo@gentoo.org> +kchart-1.6.3.ebuild:
  Version bump.

  02 Mar 2007; Jeroen Roovers <jer@gentoo.org> kchart-1.6.1.ebuild:
  Stable for HPPA.

*kchart-1.6.2 (16 Feb 2007)

  16 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +kchart-1.6.2.ebuild:
  Bump to 1.6.2 pre-release.

  15 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> kchart-1.6.1.ebuild:
  Stable on Alpha, bug 166246.

  14 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> kchart-1.6.1.ebuild:
  Stable on IA64, bug 166246.

  14 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> kchart-1.6.1.ebuild:
  Stable on sparc wrt #166246

  13 Feb 2007; Lars Weiler <pylon@gentoo.org> kchart-1.6.1.ebuild:
  Stable on ppc; bug #166246.
