@@ -1,6 +1,12 @@
 # ChangeLog for app-office/kchart
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.83 2007/11/11 20:40:18 philantrop Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.84 2009/02/08 17:21:17 carlo Exp $
+
+*kchart-1.6.3_p20090204 (08 Feb 2009)
+
+  08 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
+  +kchart-1.6.3_p20090204.ebuild:
+  Sync to branch plus various fixes.
 
   11 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org> kchart-1.6.3.ebuild:
   Added a minor fix for the desktop file as per bug 190006. Thanks to
